// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPaginationNudger should display backward nudger 1`] = `
<div
  className="bpk-pagination-nudger"
>
  <button
    className="bpk-pagination-nudger__button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-pagination-nudger__icon bpk-icon--rtl-support"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 17.293V6.707c0-1.454-1.638-2.24-2.701-1.296l-5.724 5.081a1.75 1.75 0 0 0-.049 2.547l5.724 5.505c1.049 1.009 2.75.235 2.75-1.251z"
        />
      </svg>
    </span>
    <span
      className="bpk-pagination-nudger__text--hidden"
    >
      previous
    </span>
  </button>
</div>
`;

exports[`BpkPaginationNudger should display forward nudger 1`] = `
<div
  className="bpk-pagination-nudger"
>
  <button
    className="bpk-pagination-nudger__button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-pagination-nudger__icon bpk-icon--rtl-support"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
        />
      </svg>
    </span>
    <span
      className="bpk-pagination-nudger__text--hidden"
    >
      next
    </span>
  </button>
</div>
`;
